--- a/src/style/global.css
+++ b/src/style/global.css
@@ -98,6 +98,9 @@ code {
 }
 
 @media only screen and (max-width: 700px) {
+  body{
+    font-size: 10px;
+  }
   .lol-main {
     margin-top: 15%;
     text-align: center;
