--- a/src/style/global.css
+++ b/src/style/global.css
@@ -98,8 +98,8 @@ code {
 }
 
 @media only screen and (max-width: 700px) {
-  body{
-    font-size: 10px;
+  .title{
+    margin-top: 25%;
   }
   .lol-main {
     margin-top: 15%;
